fixed spacing

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -275,7 +275,7 @@ h1 {
 }
 
 #reviews {
-    padding-top: 5%;
+    padding-top: 2%;
 }
 
 .pep2 {
@@ -297,7 +297,7 @@ h1 {
 }
 
 #reviews {
-    padding-bottom: 5%;
+    padding-bottom: 2%;
 }
 
 #reviews li {
